@@ -360,7 +360,6 @@ class LibRaw_buffer_datastream : public LibRaw_abstract_datastream
 
     virtual LibRaw_byte_buffer *make_byte_buffer(unsigned int sz)
     {
-        printf("Making zero-copy buffer\n");
         LibRaw_byte_buffer *ret = new LibRaw_byte_buffer(0);
         ret->set_buffer(buf+streampos,sz);
         return ret;
